Update version to 1.2.0 and enhance command functionality in PendingWhitelist