@@ -8,8 +8,17 @@ import org.bukkit.command.TabCompleter;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Locale;
 
 public class WhitelistCompletion implements TabCompleter {
+
+    private static final List<String> SUBCOMMANDS = List.of(
+            "pl",
+            "list",
+            "add",
+            "remove",
+            "rpl",
+            "reload");
 
     private final PendingStorage pendingStorage;
 
@@ -19,11 +28,16 @@ public class WhitelistCompletion implements TabCompleter {
 
     @Override
     public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
-        if (args.length <= 1) {
-            return List.of("pl", "list", "add", "remove", "rpl", "reload");
+        if (!sender.hasPermission("pendingwhitelist.admin")) {
+            return Collections.emptyList();
         }
 
-        String subcommand = args[0].toLowerCase();
+        if (args.length <= 1) {
+            String current = args.length == 0 ? "" : args[0];
+            return filterByPrefix(SUBCOMMANDS, current);
+        }
+
+        String subcommand = args[0].toLowerCase(Locale.ROOT);
         if (!"add".equals(subcommand) && !"remove".equals(subcommand) && !"rpl".equals(subcommand)) {
             return Collections.emptyList();
         }
@@ -36,8 +50,7 @@ public class WhitelistCompletion implements TabCompleter {
             allSuggestions.addAll(pendingStorage.getWhitelistedUsernames());
         }
 
-        List<String> result = new ArrayList<>();
-        String current = args[args.length - 1].toLowerCase();
+        List<String> availableSuggestions = new ArrayList<>();
 
         for (String suggestion : allSuggestions) {
             if (args.length > 1) {
@@ -52,7 +65,18 @@ public class WhitelistCompletion implements TabCompleter {
                     continue;
                 }
             }
-            if (suggestion.toLowerCase().startsWith(current)) {
+            availableSuggestions.add(suggestion);
+        }
+
+        return filterByPrefix(availableSuggestions, args[args.length - 1]);
+    }
+
+    private List<String> filterByPrefix(List<String> suggestions, String prefix) {
+        String normalizedPrefix = prefix.toLowerCase(Locale.ROOT);
+        List<String> result = new ArrayList<>();
+
+        for (String suggestion : suggestions) {
+            if (suggestion.toLowerCase(Locale.ROOT).startsWith(normalizedPrefix)) {
                 result.add(suggestion);
             }
         }
